# Crest-Win-Training-

./: .gitignore
Day-01/: Readme.md
Day-02/: practice.py  readme.md
Day-03/: bash.bash  docs.py
Day-04/: __Doc__.py  practice.py
Day-05/: __Doc__.py  command_output.txt  practice.py  run.sh
Day-06/: __Doc__.py  run.sh
Day-07/: __Doc__.py  practice.py
Day-08/: __Doc__.py  practice.py
Day-09/: main.py
Day-09/app/: main.py  pyproject.toml
Day-09/app/api/routes/: user.py
Day-09/app/models/: user.py
Day-09/app/schemas/: user.py
Day-09/app/services/: user.py
Day-10/: __doc__.py  pyproject.toml
Day-10/app/: main.py  test.db
Day-11/: __Doc__.py
Day-12/: __Doc__.py  practice.py
Day-13/: __Doc__.py  practice.py
Day-14/: __Doc__.py  practice.py
Day-15/: .coverage  __Doc__.py  test_sample.py  test_user_service.py  user_service.py
Day-16/: __Doc__.py  practice.py
Day-17/: __Doc__.py
Day-18/: __Doc__.py
Day-19/: __Doc__.py  dockerfile
